--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-    "name": "freemarker-js",
-    "version": "0.0.3",
-    "description": "A freemarker processor for nodejs",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/Istenes/freemarker-js.git"
-    },
-    "author": "Niklas Istenes",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/Istenes/freemarker-js/issues"
-    },
-    "homepage": "https://github.com/Istenes/freemarker-js",
-    "devDependencies": {
-        "iconv-lite": "^0.4.13",
-        "path": "^0.12.7"
-    }
+  "name": "freemarker-js",
+  "version": "0.0.4",
+  "description": "A freemarker processor for nodejs",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Istenes/freemarker-js.git"
+  },
+  "author": "Niklas Istenes",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Istenes/freemarker-js/issues"
+  },
+  "homepage": "https://github.com/Istenes/freemarker-js",
+  "devDependencies": {
+    "iconv-lite": "^0.4.13",
+    "path": "^0.12.7",
+    "q": "^1.4.1"
+  }
 }
